# btclib

./: .gitignore  LICENSE  README.md  desc  pyproject.toml  requirements.dev.txt  setup.cfg  setup.py  testing.ipynb  tox.ini
Main/: elliptic_curve.py  finite_field.py
btclib/: ec.py  elliptic_curve_digital_signature.py  elliptic_curve_over_finite_field.py  ff.py  script.py  transactions.py  utils.py
notebooks/: addresses.ipynb  encodings.ipynb  serialization.ipynb  testing.ipynb  transcations.ipynb
src/btclib/: constants.py  ec.py  ec_over_ff.py  ecds.py  ff.py  script.py  transaction.py  transactions.py  utils.py
tests/: helpers.py  requirements.txt  test_base58.py  test_finite_field.py  test_finite_field_elements.py  test_point_arithmetic.py  test_public_address_generation.py  test_public_point_serializaion.py  test_serialization.py  test_sign_and_verify.py  test_signature_and_verification.py  test_tx_fees.py  test_tx_parsing.py  test_varints.py
