[metadata]
name = btclib
description = A bitcoin wallet that is able to generate private and public keys, sign, verify and broadcast transactions. 
author = Akin Wilson
license = MIT 
license_file = license
platforms = unix, linux
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = 
    btclib
install_requires =
    requests>=2.31

python_requires = >= 3.9
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    requests>=2.31
    pytest>=8.2
    pytest-cov>=5.0.0
    tox>=3.25.0



